Create links between pages
Without links cannot move from home page to recipes and vice versa.
Create links in html so navigation from home page to recipes or recipe
to home is possible.

--- a/recipes/blt.html
+++ b/recipes/blt.html
@@ -6,7 +6,9 @@
         <title>BLT</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>BLT</h1>
+        
     </body>
 
 </html>
