Add text to BLT file
BLT file didn't have a recipe. Add recipe description to page. Update
readme to include license info of image.

--- a/recipes/blt.html
+++ b/recipes/blt.html
@@ -8,6 +8,35 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>BLT</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/BLT_sandwich_prepared_with_spinach.jpg"
+        width = '500' alt = "BLT image">
+        <h2>Description</h2>
+            <p>This a recipe for a classic sandwich, the <strong>BLT</strong>. Not many people know what BLT stands for, 
+                but it's <em>Bacon</em>, <em>Lettuce</em>, and <em>Tomato</em>! The three of these
+                combine, with a spot of mayo, to make a seriously good sandwich. Follow along to learn
+                how tomake your first BLT!</p>
+        <h2>Ingredients</h2>
+                <ul>
+                    <li>Bread - 2 slices</li>
+                    <li>Bacon - 4 Strips</li>
+                    <li>Lettuce - 1 leaf</li>
+                    <li>Tomato - 2 slices</li>
+                    <li>Mayo</li>
+                    <li>Salt</li>
+                    <li>Pepper</li>
+                </ul>
+        <h2>Steps</h2>
+                <ol>
+                    <li>Preheat your oven to 400 degrees fahrenheit.</li>
+                    <li>Once preheated place your bacon on a pan and put in oven for 20 minutes. Remove and let cool on a paper towel.</li>
+                    <li>Put both slices of bread in a toaster.</li>
+                    <li>Once toasted remove and use a butter knife to spread mayo on one side of each slice.</li>
+                    <li>On "bottom" slice of bread place leaf of lettuce</li>
+                    <li>On top of lettuce leaf place tomato slices.</li>
+                    <li>On top of tomato put strips of bacon.</li>
+                    <li>Season with salt and pepper, to tast</li>
+                    <li>Cover with "top" slice of bread. cut in half, and enjoy!</li>
+                </ol>
         
     </body>
 
