--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/blt.html">BLT</a>
+        <ul>    
+            <li><a href="recipes/blt.html">BLT</a></li>
+            <li><a href="recipes/pbj.html">PB&J</a></li>
+            <li><a href="recipes/toast.html">Toast</a></li>
+        </ul>
     </body>
 
 
