Add pictures to new pages
New pages didn't have any photos on them. Link new photos to each page.
Add licensing info to readme.

--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -8,6 +8,7 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Toast</h1>
+        <img src="../photos/toast.jpg" width="500" alt="Toast Pic"> 
     </body>
 
 </html>
