--- a/recipes/pbj.html
+++ b/recipes/pbj.html
@@ -8,6 +8,8 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>PB&J</h1>
+        <img src = "https://upload.wikimedia.org/wikipedia/commons/4/49/Peanut_Butter_and_Jelly_Sandwich.jpg"
+            width="500" alt = "PB&J Pic" >
     </body>
 
 </html>
