Add text to webpages
Toast and PB&J pages didn't have text. Add descriptions, ingredients, and steps.

--- a/recipes/pbj.html
+++ b/recipes/pbj.html
@@ -10,6 +10,27 @@
         <h1>PB&J</h1>
         <img src = "https://upload.wikimedia.org/wikipedia/commons/4/49/Peanut_Butter_and_Jelly_Sandwich.jpg"
             width="500" alt = "PB&J Pic" >
+        <h2>Description</h2>
+            <p>It's a little know fact but <strong>PB & J</strong>
+            stands for <em>Peanut Butter and Jelly</em>! Have you ever had one? I have 
+            and I have to say they are pretty damn tasty. Follow the recipe below to make
+            one yourself.</p>
+        <h2>Ingredients</h2>
+                <ul>
+                    <li>Bread - 2 slices</li>
+                    <li>Peanut Butter</li>
+                    <li>Jelly - your flavor of choice</li>
+                </ul>
+        <h2>Steps</h2>
+                <ol>
+                    <li>Grab your two slices of bread and put them on a plate. 
+                        <em>For an optimal PB&J experience toast the bread first.</em></li>
+                    <li>Grab your peanut butter and spread a thick layer over one slice of bread.</li>
+                    <li>Grab you jelly and spread it across the other slice of bread</li>
+                    <li>Put both pieces of bread together
+                        <em>peanut butter facing jelly</em>. Cut in half and enjoy!
+                    </li>
+                </ol>
     </body>
 
 </html>
