--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -9,6 +9,22 @@
         <a href="../index.html">Home</a>
         <h1>Toast</h1>
         <img src="../photos/toast.jpg" width="500" alt="Toast Pic"> 
+        <h2>Description</h2>
+            <p>Have you ever had buttered toast? If not <strong>stop scrolling</strong>, because you are in 
+                for quite a treat. Two ingredients combine to make one of the most dynamic foods
+                of all time.
+            </p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>Bread - 1 slice, any type will do (I prefer sourdough)</li>
+                <li>Butter - Ideally salted</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Toast your slice of bread.</li>
+                <li>Use a knife to spread butter across your toasted bread.</li>
+                <li>Continue until full, experiment with toasting time and butter amount.</li>
+            </ol>
     </body>
 
 </html>
