--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="title">
         <h1>Odin Recipes</h1>
-        <ul>    
-            <li><a href="recipes/blt.html">BLT</a></li>
-            <li><a href="recipes/pbj.html">PB&J</a></li>
-            <li><a href="recipes/toast.html">Toast</a></li>
-        </ul>
+        </div>
+        <div class="list"><ul>    
+            <li class="blt"><a href="recipes/blt.html">BLT</a></li>
+            <li class="pbj"><a href="recipes/pbj.html">PB&J</a></li>
+            <li class="toast"><a href="recipes/toast.html">Toast</a></li>
+        </ul></div>
     </body>
 
 
