--- a/recipes/blt.html
+++ b/recipes/blt.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="stylerec.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="homemenu">Home</a>
         <h1>BLT</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/BLT_sandwich_prepared_with_spinach.jpg"
         width = '500' alt = "BLT image">
-        <h2>Description</h2>
-            <p>This a recipe for a classic sandwich, the <strong>BLT</strong>. Not many people know what BLT stands for, 
+        <h2 class="desc">Description</h2>
+            <p class="text">This a recipe for a classic sandwich, the <strong>BLT</strong>. Not many people know what BLT stands for, 
                 but it's <em>Bacon</em>, <em>Lettuce</em>, and <em>Tomato</em>! The three of these
                 combine, with a spot of mayo, to make a seriously good sandwich. Follow along to learn
                 how to make your first BLT!</p>
-        <h2>Ingredients</h2>
-                <ul>
+        <h2 class = "ing">Ingredients</h2>
+                <ul class="text">
                     <li>Bread - 2 slices</li>
                     <li>Bacon - 4 Strips</li>
                     <li>Lettuce - 1 leaf</li>
@@ -26,8 +26,8 @@
                     <li>Salt</li>
                     <li>Pepper</li>
                 </ul>
-        <h2>Steps</h2>
-                <ol>
+        <h2 class="steps">Steps</h2>
+                <ol class="text">
                     <li>Preheat your oven to 400 degrees fahrenheit.</li>
                     <li>Once preheated place your bacon on a pan and put in oven for 20 minutes. Remove and let cool on a paper towel.</li>
                     <li>Put both slices of bread in a toaster.</li>
