--- a/recipes/pbj.html
+++ b/recipes/pbj.html
@@ -4,25 +4,26 @@
     <head>
         <meta charset="UTF-8">
         <title>PB&J</title>
+        <link rel="stylesheet" href="stylerec.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="homemenu">Home</a>
         <h1>PB&J</h1>
         <img src = "https://upload.wikimedia.org/wikipedia/commons/4/49/Peanut_Butter_and_Jelly_Sandwich.jpg"
             width="500" alt = "PB&J Pic" >
-        <h2>Description</h2>
-            <p>It's a little know fact but <strong>PB & J</strong>
+        <h2 class="desc">Description</h2>
+            <p class="text">It's a little know fact but <strong>PB & J</strong>
             stands for <em>Peanut Butter and Jelly</em>! Have you ever had one? I have 
             and I have to say they are pretty damn tasty. Follow the recipe below to make
             one yourself.</p>
-        <h2>Ingredients</h2>
-                <ul>
+        <h2 class="ing">Ingredients</h2>
+                <ul class="text">
                     <li>Bread - 2 slices</li>
                     <li>Peanut Butter</li>
                     <li>Jelly - your flavor of choice</li>
                 </ul>
-        <h2>Steps</h2>
-                <ol>
+        <h2 class="steps">Steps</h2>
+                <ol class="text">
                     <li>Grab your two slices of bread and put them on a plate. 
                         <em>For an optimal PB&J experience toast the bread first.</em></li>
                     <li>Grab your peanut butter and spread a thick layer over one slice of bread.</li>
