--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -4,23 +4,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Toast</title>
+        <link rel="stylesheet" href="stylerec.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="homemenu">Home</a>
         <h1>Toast</h1>
         <img src="../photos/toast.jpg" width="500" alt="Toast Pic"> 
-        <h2>Description</h2>
-            <p>Have you ever had buttered toast? If not <strong>stop scrolling</strong>, because you are in 
+        <h2 class="desc">Description</h2>
+            <p class="text">Have you ever had buttered toast? If not <strong>stop scrolling</strong>, because you are in 
                 for quite a treat. Two ingredients combine to make one of the most dynamic foods
                 of all time.
             </p>
-        <h2>Ingredients</h2>
-            <ul>
+        <h2 class="ing">Ingredients</h2>
+            <ul class="text">
                 <li>Bread - 1 slice, any type will do (I prefer sourdough)</li>
                 <li>Butter - Ideally salted</li>
             </ul>
-        <h2>Steps</h2>
-            <ol>
+        <h2 class="steps">Steps</h2>
+            <ol class="text">
                 <li>Toast your slice of bread.</li>
                 <li>Use a knife to spread butter across your toasted bread.</li>
                 <li>Continue until full, experiment with toasting time and butter amount.</li>
